# viruse_fabric_starter

./: .gitignore  ASSUMPTIONS.md  DEPENDENCY_GRAPH.md  MILESTONE_VALUE.md  NEGATIVE_RESULTS.md  PROJECT_LIMITS.md  PROOF_DEBT.md  README.md  THEORY.md  VF_H2_PROOF_GATES_V15.md  VF_H2_RESTRICTED_PROOF_SPINE_FREEZE_V16_0.md  VF_H2_SCORE_PRESERVING_POLICY_INSTANTIATION_V16_1.md  lake-manifest.json  lakefile.lean  pyproject.toml
docs/: ATEMPORAL_PLATFORM_MODEL.md
notes/: project_state.md  theory_log.md
outputs/: adm_a_definition_draft_execution_v8_137.md  adversarial_sensitivity_v2_7.md  attractor_class_bridge_authorization_plan_v8_75.md  attractor_class_bridge_execution_v8_76.md  attractor_class_scaffold_boundary_audit_v8_77.md  baseline_comparison_v2_8.md  bilingual_quality_report_v1_9.md  c_reg_definition_draft_execution_v8_138.md  candidate_source_metadata_audit_v6_2.md  carrier_domain_evidence_boundary_audit_plus_gap_resolution_decision_v8_89.md  citation_grounded_manuscript_revision_plan_v5_0.md  citation_placeholder_plan_v3_9.md  claim_to_citation_readiness_map_v4_9.md  completion_decision_boundary_audit_planning_v8_102.md  constructive_attractor_ablation_v2_5.md  controlled_adm_a_definition_completion_execution_v8_149.md  controlled_c_reg_definition_completion_execution_v8_150.md  controlled_dependent_object_completion_bundle_integration_v8_155.md  controlled_formal_definition_completion_approval_decision_execution_v8_35.md  controlled_formal_definition_completion_approval_decision_plan_v8_34.md  controlled_formal_definition_completion_approval_plan_v8_33.md  (+697 more)
(+929 files in other folders)
